Pass optional settings to identity-credentials
Allow config options to set optional settings on the
identity-credentials relation.

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -2,6 +2,10 @@ series: trusty
 services:
   mock:
     charm: mock-keystone-client
+    options:
+      project: newproject
+      requested_roles: Member,Admin
+      requested_grants: Member,Admin
   keystone:
     branch: git://github.com/openstack/charm-keystone
   mysql:
